{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 24,
  "lineage": "6efbb992-b5d2-cb6e-2f64-d4c8c669dfea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:958620641019:instance/i-0d20136b6263daf87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d20136b6263daf87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b73c2daa4ae2fa9",
            "private_dns": "ip-172-2-56-209.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.2.56.209",
            "public_ip": "13.58.137.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b420053d00f45ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-021ae74c35934f75b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fdd7ddac9bf899b",
            "tags": {
              "name": "EC2 web instance"
            },
            "tags_all": {
              "name": "EC2 web instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "name": "EC2 web instance"
            },
            "vpc_security_group_ids": [
              "sg-021ae74c35934f75b"
            ]
          },
          "dependencies": [
            "aws_security_group.securityGroup",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958620641019:internet-gateway/igw-0d24993b3e9ee3f43",
            "id": "igw-0d24993b3e9ee3f43",
            "owner_id": "958620641019",
            "tags": {
              "name": "Internet Gateway for Virtual Private Cloud"
            },
            "tags_all": {
              "name": "Internet Gateway for Virtual Private Cloud"
            },
            "vpc_id": "vpc-05d4629ccd45f7dfc"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958620641019:route-table/rtb-09fc9270322340b8c",
            "id": "rtb-09fc9270322340b8c",
            "owner_id": "958620641019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d24993b3e9ee3f43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public routing table"
            },
            "tags_all": {
              "name": "public routing table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d4629ccd45f7dfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routing_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046df99e8b3b5ff9f",
            "route_table_id": "rtb-09fc9270322340b8c",
            "subnet_id": "subnet-06fdd7ddac9bf899b"
          },
          "dependencies": [
            "aws_internet_gateway.internetGateway",
            "aws_route_table.publicRouteTable",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958620641019:security-group/sg-021ae74c35934f75b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021ae74c35934f75b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "958620641019",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_ssh_http"
            },
            "tags_all": {
              "name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d4629ccd45f7dfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958620641019:subnet/subnet-06fdd7ddac9bf899b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.2.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fdd7ddac9bf899b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958620641019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public subnet"
            },
            "tags_all": {
              "name": "public subnet"
            },
            "vpc_id": "vpc-05d4629ccd45f7dfc"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958620641019:vpc/vpc-05d4629ccd45f7dfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.2.0.0/16",
            "default_network_acl_id": "acl-0821f53a9e0818ecf",
            "default_route_table_id": "rtb-0de45b46ad419bb52",
            "default_security_group_id": "sg-07aeed14cfac0861f",
            "dhcp_options_id": "dopt-072e7fb4141af05bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d4629ccd45f7dfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de45b46ad419bb52",
            "owner_id": "958620641019"
          },
          "dependencies": [
            "aws_vpc_ipam.ipam_pool",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.cidr_pool",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}